2012-08-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r120113.
        http://trac.webkit.org/changeset/120113
        https://bugs.webkit.org/show_bug.cgi?id=95320

        Wrong fix for the problem, experimentally rolling it out for
        bug 95237. (Requested by rakuco on #webkit).

        * efl/jhbuildrc:

2012-08-29  Dominic Mazzoni  <dmazzoni@google.com>

        AX: Canvas should have a distinct role
        https://bugs.webkit.org/show_bug.cgi?id=95248

        Reviewed by Chris Fleizach.

        Add support for canvas accessibility role.

        * DumpRenderTree/chromium/TestRunner/AccessibilityUIElementChromium.cpp:
        (roleToString):

2012-08-28  Eric Seidel  <eric@webkit.org>

        cr-ews bot doesn't set CWD correctly when zipping layout test results
        https://bugs.webkit.org/show_bug.cgi?id=91265

        Reviewed by Kenneth Russell.

        This should make the zips slightly less cumbersome to deal with.

        * Scripts/webkitpy/common/system/workspace.py:
        (Workspace.create_zip):
        * Scripts/webkitpy/common/system/workspace_unittest.py:
        (WorkspaceTest.test_create_zip):
        (WorkspaceTest.test_create_zip_exception):

2012-08-28  Benjamin Poulain  <benjamin@webkit.org>

        Fix the Commiters script

        Unreviewed.

        Remove Roger Fong from the Contributor list, he appears in the Commiter list since r126949.

        * Scripts/webkitpy/common/config/committers.py:

2012-08-28  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Adding myself to committers list.

        * Scripts/webkitpy/common/config/committers.py:

2012-08-28  Roger Fong  <roger_fong@apple.com>

        Add minires to list of required cygwin install packages.
        https://bugs.webkit.org/show_bug.cgi?id=76936

        Reviewed by Tim Horton.

        * CygwinDownloader/cygwin-downloader.py:

2012-08-28  Xianzhu Wang  <wangxianzhu@chromium.org>
