@@ -1,3 +1,15 @@
+2012-08-29  Kristóf Kosztyó  <kkristof@inf.u-szeged.hu>
+
+        [NRWT] The nrwt should check the contents of the skipped files with --lint-test-files
+        https://bugs.webkit.org/show_bug.cgi?id=93723
+
+        Reviewed by Dirk Pranke.
+
+        * Scripts/webkitpy/layout_tests/models/test_expectations.py:
+        (TestExpectationParser.expectation_for_skipped_test):
+        * Scripts/webkitpy/layout_tests/models/test_expectations_unittest.py:
+        (SkippedTests.test_skipped_entry_dont_exist):
+
 2012-08-29  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r120113.
